# QuantizedSAE

./: .gitignore  README.md  binary_feature_analysis_simple.py  binary_feature_decomposition.py  binary_sae_theory.py  pyproject.toml  requirements.txt  setup.py
baseSAE/: SAE.py
customSAE/: .gitignore  analyze_gradient_flow.py  analyze_quantization_math.py  binary_SAE.py  binary_correction_demo.py  binary_latent_SAE.py  binary_sae_trainer_improved.py  compare_activation_methods.py  compare_regularization_approaches.py  diagnose_binary_sae.py  diagnose_training.py  encoder_debug.py  fake_binary_SAE.py  fake_decoder.py  first_launch.py  hidden_state_dataset.py  load_dataset.py  local_min_detector.py  mid_layer_extractor.py  model_lens.sbatch  model_lens_no_generation.py  run_inference.sh  sae_trainer.py  sae_trainer_fixed.py  ternary_SAE.py  test_bias_initialization.py  test_binary_sae_simple.py  test_continuous_decoder.py  test_gradients.py  test_initialization.py  test_without_weightnorm.py  threshold_crossing_demo.py  train_ternary_sae.py  transformer_inspector.py
customSAE/SAEs/: baseline_SAE.py  binary_SAE.py  binary_SAE_fixed.py  binary_SAE_improved_post_quant.py  binary_SAE_topk.py  binary_SAE_v2.py  binary_latent_SAE.py  quantized_matryoshka_SAE.py  ternary_SAE.py
customSAE/baseSAE/: SAE.py
customSAE/nnba/: adder.py  logic.py  test_adder.py  test_logic_gates.py
custom_SAE/: model_lens_generation.py  ternary_sae.py  transformer_inspector.py
custom_sae/: binaryLatentSAE.py  train_ternary_sae.py
docs/: architecture.md  usage.md
scripts/analysis/: analyze_cosine_sim.py  analyze_sae.py  dynamic_analysis.py  dynamic_analyze.py  summarize_stats.py
scripts/evaluation/: estimate_baseline_error.py  estimate_quantization_error.py
scripts/training/: train.py  train_binary.py  train_quantized.py
src/quantized_sae/: __init__.py
ternary_sae/: .gitignore  anthropic_handler.py  detokenizer.py  first_launch.py  load_dataset.py  mid_layer_extractor.py  model_lens.py  model_lens_generation.py  model_lens_no_generation.py  nohup.out  sae_inspector.py  ternary_sae.py  train_ternary_sae.py  transformer_inspector.py
(+31 files in other folders)
